# optimizer

./: .gitignore  README.md  com.github.hannesschulze.optimizer.json~  meson.build  meson_options.txt  org.gnome.Optimizer.json~  ru.po
.github/workflows/: ci.yml
data/: com.github.hannesschulze.optimizer.appdata.xml.in  com.github.hannesschulze.optimizer.desktop.in  com.github.hannesschulze.optimizer.gresource.xml  com.github.hannesschulze.optimizer.gschema.xml  meson.build
data/css/: style.css
debian/: changelog  control  copyright
po/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.hannesschulze.optimizer.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+161 more)
po/extra/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+158 more)
src/: Application.vala  Main.vala  Window.vala  meson.build
src/configs/: Constants.vala  Constants.vala.in  Settings.vala
src/controllers/: AppController.vala
src/utils/: DiskSpace.vala  NVidiaInfo.vala  Process.vala  ProcessManager.vala  Resources.vala
src/utils/gpuusage/: AMDInfo.vala  GPUInfo.vala  NvidiaInfo.vala
src/views/: AppView.vala  DashboardView.vala  NVidiaView.vala  ProcessesView.vala  SystemCleanerView.vala
src/widgets/: CircularProgressBar.vala  CustomStorageBar.vala  HeaderBar.vala  SystemInfo.vala
subprojects/: libXNVCtrl.wrap  radeontop.wrap
subprojects/libXNVCtrl/: README.md  meson.build
subprojects/libXNVCtrl/samples/: meson.build
subprojects/libXNVCtrl/test/: NVCtrl_test.c  meson.build
vapi/: libXNCtrl.vapi  libradeontop.vapi  x11.vapi
