optimizer_sources = files(
  'configs/Constants.vala',
  'configs/Settings.vala',
  'controllers/AppController.vala',
  'utils/Resources.vala',
  'views/DashboardView.vala',
  'views/AppView.vala',
  'widgets/HeaderBar.vala',
  'widgets/CircularProgressBar.vala',
  'widgets/SystemInfo.vala',
  'Application.vala',
  'Main.vala',
  'Window.vala',
)
